--- a/app/views/site_settings/admin.html.erb
+++ b/app/views/site_settings/admin.html.erb
@@ -3,6 +3,7 @@
 <ul>
   <li><%= link_to 'List of Content Pages', content_pages_path %></li>
   <li><%= link_to 'List of Categories', categories_path %></li>
+  <li><%= link_to 'Manage Events', event_calendar_dashboard_path %></li>
   <li><%= link_to 'Site-wide Settings', site_settings_path %></li>
   <li><%= link_to 'User Management', users_path %></li>
   <li><%= link_to 'User Groups', user_groups_path %></li>
