--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -24,6 +24,13 @@ p + p { margin-top: -0.8em; text-indent: 0; }
   -webkit-border-radius: 8px;
 }
 
+.base_content div {
+  background: #fff;
+  border: 4px solid #FFF;
+  -moz-border-radius: 8px;
+  -webkit-border-radius: 8px;
+}
+
 /* embeds the openid image in the text field */
 input#user_openid_identifier, input#user_session_openid_identifier {
     background: url(http://openid.net/images/login-bg.gif) no-repeat;
@@ -268,3 +275,8 @@ th.sorted_by { background: #99C; }
 
 a.delete_x:link, a.delete_x:visited, a.delete_x:active { color: #900; text-decoration: none; border: none;}
 a.delete_x:hover { color: #F33; text-decoration: none; border: none; }
+
+.fc-event-title {
+  color: #fff;
+  font-size: 12px;
+}
