install task & generate blueprint styles
install & integrate file_share

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -26,6 +26,10 @@
     <%= textilize_without_paragraph @event.description %>
   </p>
   <% end %>
+  
+  <%= render :partial => 'file_attachments/plupload_with_listing', :locals => {
+    :file_attachments => @event.file_attachments
+  } %>
 
 <% if current_user && can?(:read, @event.attendees) %>
 <h3>Attendees/Participants</h3>
