use released gems for file_share/event_calendar_engine
update admin link to file_attachments path from dashboards_file_share_path

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -28,7 +28,7 @@
   <% end %>
   
   <%= render :partial => 'file_attachments/plupload_with_listing', :locals => {
-    :file_attachments => @event.file_attachments
+    :files => @event.file_attachments
   } %>
 
 <% if current_user && can?(:read, @event.attendees) %>
