--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,14 +7,15 @@
     <title><%= [site_title, page_title].reject(&:blank?).join(' - ') %></title>
     
     <%= stylesheet_link_tag 'screen', :media => 'screen, projection' %>
-    <%= stylesheet_link_tag "plupload/screen", :media => "screen, projection" %>
+    <%= stylesheet_link_tag "file_share/plupload/screen", :media => "screen, projection" %>
     <%= stylesheet_link_tag 'print', :media => 'print' %>
     
     <!--[if lt IE 8]>
       <%= stylesheet_link_tag 'ie', :media => 'screen, projection' %>
     <![endif]-->
     
-    <%= stylesheet_link_tag 'application', 'text_and_colors', 'main_elements', 'error_messages' %>
+    <%= stylesheet_link_tag 'application', 'text_and_colors', 'main_elements',
+        'error_messages', 'formtastic', 'formtastic_changes' %>
     
 		<link rel="stylesheet" href="<%= url_for(:controller => '/themes', :action => :colors,
       :name => @theme_colors, :format => 'css') %>?<%= @custom_colors_timestamp %>" type="text/css" media="screen"/>
@@ -23,12 +24,9 @@
         :name => 'override', :format => 'css') %>?<%= @css_override_timestamp %>" type="text/css" media="screen"/>
     <% end %>
       
-    <%= 
-    #javascript_include_tag (javascripts + event_file_javascripts).uniq
-    javascript_include_tag (javascripts + event_calendar_javascript_includes + file_share_javascript_includes).uniq
-    %>
+    <%= javascript_include_tag javascripts %>
     
-    <%= stylesheet_link_tag "tablesorter/blue/style", "smoothness/jquery-ui-1.7.2.custom.css" %>
+    <%= stylesheet_link_tag "/tablesorter/blue/style", "smoothness/jquery-ui-1.7.2.custom.css" %>
 
     <script type="text/javascript">
       jQuery(function($) {
