--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -279,6 +279,10 @@ body .negative {color:#d12f19;}
 a.negative:hover, button.negative:hover {background-color:#fbe3e4;border:1px solid #fbc2c4;color:#d12f19;}
 a.negative:active {background-color:#d12f19;border:1px solid #d12f19;color:#fff;}
 
+/* files */
+div.file_attachment {margin-bottom:10px;}
+p.file_attachment_description {float:right;max-width:70%;}
+
 /* events */
 .fc, .fc .fc-header, .fc .fc-content {font-size:1em;}
 .fc {direction:ltr;text-align:left;}
