fix nil to str error in ApplicationHelper#user_box   links_to_events began checking auth/z before render which would fail due to   the anonymous request and cancans dependency on current_user.   checking the auth/z params against a whitelist before cancan lets us define   public resources/actions w/out bypassing links_to_events helper   - now w/ specs!   - also defined :read & :download perms for Event & FileAttachment in Ability   - adds const. PUBLIC_RESOURCES to ApplicationController   - adds ApplicationController#public_resource?
update to event_calendar 0.1.6

introduce custom file_attachments/file_attachments.html.erb template.
  engine provided template does not acct for 'deleted' events which are preserved
  as event revisions.

remove link-icons blueprint plugin

uncomment mysql line in Gemfile (accidentally commented out last few commits)

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -5,7 +5,7 @@
 }) %>::<%= @event.name %></h1>
 
   <p style="float: right;">
-    <%= links_to_edit_and_delete_event(@event) %>
+    <%= links_to_edit_and_delete_event(@event, {}, {:class => 'fake_button'}) %>
   </p>
 
   <p><em><%= @event.event_type %></em></p>
@@ -32,11 +32,11 @@
   </p>
   <% end %>
   
-  <%= form_for_browse_event_revisions(@event) %>
-  
   <%= render :partial => 'file_attachments/plupload_with_listing', :locals => {
     :files => @event.file_attachments
   } %>
+
+  <%= form_for_browse_event_revisions(@event) %>
 
 <% # disable for now, until attendees are functional
 if false && current_user && can?(:read, @event.attendees) %>
