--- a/app/views/dashboards/event_calendar.html.erb
+++ b/app/views/dashboards/event_calendar.html.erb
@@ -1,13 +1,13 @@
 <h1><%= link_to "Event Calendar", events_path %> Dashboard</h1>
 
-<p style="float:right;"><%= link_to_new_event %> : <%= link_to_event_revisions %></p>
+<p style="float:right;"><%= link_to_new_event %> : <%= link_to_event_revisions({}, {:link_text => 'Browse Deleted Events'}) %></p>
 <div class="span-16 last">
   <h2>Current Events (<em><%= @current_events.count %></em>)</h2>
   <%- count = 0 -%>
   <% @current_events.each do |event| %>
   <%- count += 1 -%>
   <div class="span-2 <%= count % 8 == 0 ? ' last' : '' %>">
-    <p><strong><%= link_to event.name, edit_event_path(event) %></strong></p>
+    <p><strong><%= link_to event.name, event_path(event) %></strong></p>
     <p><em><%= event.start_on.strftime("%a, %b %d") %></em></p>
     <p><em><%= event.end_on.strftime("%a, %b %d") %></em></p>
   </div>
@@ -26,7 +26,7 @@
             <li><%= day.ordinalize %>
               <ul>
                 <% days_events.each do |event| %>
-                  <li><%= link_to event.name, edit_event_path(event) %></li>
+                  <li><%= link_to event.name, event_path(event) %></li>
                 <% end %>
               </ul>
             </li>
@@ -53,7 +53,7 @@
             <li><%= day.ordinalize %>
               <ul>
                 <% days_events.each do |event| %>
-                  <li><%= link_to event.name, edit_event_path(event) %></li>
+                  <li><%= link_to event.name, event_path(event) %></li>
                 <% end %>
               </ul>
             </li>
