--- a/app/views/dashboards/event_calendar.html.erb
+++ b/app/views/dashboards/event_calendar.html.erb
@@ -1,69 +1,11 @@
-<h1><%= link_to "Event Calendar", events_path %> Dashboard</h1>
+<h1>Event Calendar Dashboard</h1>
 
-<p style="float:right;"><%= link_to_new_event %> : <%= link_to_event_revisions({}, {:link_text => 'Browse Deleted Events'}) %></p>
-<div class="span-16 last">
-  <h2>Current Events (<em><%= @current_events.count %></em>)</h2>
-  <%- count = 0 -%>
-  <% @current_events.each do |event| %>
-  <%- count += 1 -%>
-  <div class="span-2 <%= count % 8 == 0 ? ' last' : '' %>">
-    <p><strong><%= link_to event.name, event_path(event) %></strong></p>
-    <p><em><%= event.start_on.strftime("%a, %b %d") %></em></p>
-    <p><em><%= event.end_on.strftime("%a, %b %d") %></em></p>
-  </div>
-  <% end %>
-</div>
-<div class="span-8">
-  <h2>Future Events (<em><%= @future_events.count %></em>)</h2>
-  <ul>
-    <% @future_events.group_by(&:start_year).each do |year, years_events| %>
-    <li><%= year %>
-      <ul>      
-        <% years_events.group_by(&:start_month).each do |month, months_events| %>
-        <li><%= month %>
-          <ul>
-            <% months_events.group_by(&:start_day).each do |day, days_events| %>
-            <li><%= day.ordinalize %>
-              <ul>
-                <% days_events.each do |event| %>
-                  <li><%= link_to event.name, event_path(event) %></li>
-                <% end %>
-              </ul>
-            </li>
-            <% end %>
-          </ul>
-        </li>
-        <% end %>
-      </ul>
-    </li>
-    <% end %>
-  </ul>  
-</div>
+<p style="float:right;">
+  <%= link_to_new_event({}, {:class => 'fake_button'}) %>
+  <%= link_to_event_revisions({}, {
+    :link_text => 'Browse Deleted Events',
+    :class => 'fake_button'
+  }) %>
+</p>
 
-<div class="span-8 last">
-  <h2>Past Events (<em><%= @past_events.count %></em>)</h2>
-  <ul>
-    <% @past_events.group_by(&:start_year).each do |year, years_events| %>
-    <li><%= year %>
-      <ul>      
-        <% years_events.group_by(&:start_month).each do |month, months_events| %>
-        <li><%= month %>
-          <ul>
-            <% months_events.group_by(&:start_day).each do |day, days_events| %>
-            <li><%= day.ordinalize %>
-              <ul>
-                <% days_events.each do |event| %>
-                  <li><%= link_to event.name, event_path(event) %></li>
-                <% end %>
-              </ul>
-            </li>
-            <% end %>
-          </ul>
-        </li>
-        <% end %>
-      </ul>
-    </li>
-    <% end %>
-  </ul>  
-</div>
-<div style="clear:both;"></div>
+<%= render :partial => 'events/list' %>
