mv file list below event details

--- a/app/views/events/_details.html.erb
+++ b/app/views/events/_details.html.erb
@@ -12,5 +12,7 @@
 </div>
 <%- end -%>
 
-<h3>Materials</h3>
-<%= render :partial => 'file_attachments/file_attachment', :collection => details.file_attachments %>
+<div class="span-12 last">
+  <h3>Materials</h3>
+  <%= render :partial => 'file_attachments/file_attachment', :collection => details.file_attachments %>  
+</div>
