--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -341,3 +341,6 @@ a.delete_x:hover { color: #F33; text-decoration: none; border: none; }
 .fc-rtl .fc-grid .fc-event-time {
 	float: right;
 	}
+.links p.new {
+  float: right;
+}
