visual tweaks and changes for events inside the CMS

--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -1,9 +1,10 @@
 <% unless event.nil? %>
 <%= div_for_record(event) do -%>
-  <h1><%= link_to_events({:no_wrapper => true}, {:link_text => "Events"}) %>: <%= event.name %> (<em><%= event.event_type %></em>)</h1>
   <p style="float: right;">
     <%= links_to_edit_and_delete_event(event, {}, {:class => 'fake_button'}) if event.current_revision? %>
   </p>
+  <h1><%= link_to_events({:no_wrapper => true}, {:link_text => "Events"}) %>: <%= event.name %> (<em><%= event.event_type %></em>)</h1>
+  <div style="clear:both"></div>
   <%= render :partial => 'events/event_details', :object => event %>
   <%- if event.current_revision? && (event.links.count > 0 || event.file_attachments.count > 0) -%>
   <p><strong>Materials/Resources</strong></p>
