--- a/app/views/content_pages/index.html.erb
+++ b/app/views/content_pages/index.html.erb
@@ -30,7 +30,7 @@
             &nbsp; <em>(draft)</em>
           <% end %>
         </td>
-        <td><%= @search_phrase ? highlight(excerpt(strip_tags(content_page.body), @search_phrase, :radius => 75), @search_phrase) :
+        <td><%= @search_phrase ? highlight(excerpt(strip_tags(content_page.body), @search_phrase, :radius => 75) || '', @search_phrase) :
                     truncate(strip_tags(content_page.body), :length => 150) %></td>
         <td><%= content_page.publish_on ? content_page.publish_on.strftime('%m/%d/%Y') : '' %></td>
         <td><%=raw content_page.categories.map { |cat| link_to cat.name, cat }.join(', ') %></td>
