--- a/app/views/message_posts/_message_in_forum.html.erb
+++ b/app/views/message_posts/_message_in_forum.html.erb
@@ -4,7 +4,11 @@
       <%=raw gravatar_for message.user, :size => 50 %>
     </div>
     posted <%= post_time message.created_at  %> by
-    <strong><%#= link_to message.user.name, '#TODO_link_to_users_profile'  %><%= message.user.full_name %></strong>
+    <% if message.user %>
+      <strong><%#= link_to message.user.name, '#TODO_link_to_users_profile'  %><%= message.user.full_name %></strong>
+    <% else %>
+      <em>unknown (deleted) user</em>
+    <% end %>
   </td>
   <td><strong><%= link_to message.subject, forum_message_post_path(@forum, message) %>:</strong>
     <span class="gray"><%=h truncate( strip_tags(message.body), :length => 200 ) %></span>
