--- a/app/views/events/_details.html.erb
+++ b/app/views/events/_details.html.erb
@@ -1,19 +1,19 @@
+<div class="span-12 last">
 <%- unless details.one_day? %>
-<%= textilize(details.location) %>
-<%= textilize(details.description) %>
+  <%= textilize(details.location) %>
+  <%= textilize(details.description) %>
 <%- else -%>
-<div class="span-6">
-<%= textilize(details.location) %>
-<%= textilize(details.description) %>
+  <%= textilize(details.location) %>
+  <%= textilize(details.description) %>
+  <p><%= event_times(details) %></p>
+<%- end -%>  
 </div>
-
-<div class="span-6 last">
-  <%= event_times(details) %>
-</div>
-<%- end -%>
 
 <%- if details.file_attachments.count > 0 || details.links.count > 0 -%>
-<%- @event = details -%>
+<%- 
+# ugly! maybe blocks will help here
+@event = details 
+-%>
 <div class="span-12 last">
   <h3>Materials/Resources</h3>
   <%= render details.links.all %>
