generate rss single_access_token protected rss feeds for forums & message posts

--- a/app/views/message_posts/show.html.erb
+++ b/app/views/message_posts/show.html.erb
@@ -5,6 +5,10 @@
   <% end -%>
 </h1>
 
+<p class="small_text" style="text-align: right;">
+  <%= link_to_rss forum_url(@forum, :user_credentials => current_user.single_access_token, :format => :rss) %>
+</p>
+
 <% if @message_post %>
   <h2><%= @message_post.subject %></h2>
 <% end %>
