--- a/app/views/forums/show.html.erb
+++ b/app/views/forums/show.html.erb
@@ -9,6 +9,9 @@
 </p>
 
 <div style="float:right">
+  <p class="small_text" style="text-align: right;">
+    <%= link_to_rss forum_url(@forum, :user_credentials => current_user.single_access_token, :format => :rss) %>
+  </p>
   <%= form_tag(search_forum_path(@forum),  :method => :get  ) do %>
     <%= text_field_tag :q, "quick search", :onfocus => "$('q').value='';" %>
     <%= submit_tag "Go" %>
