--- a/app/views/blog/posts/_post.html.erb
+++ b/app/views/blog/posts/_post.html.erb
@@ -2,8 +2,10 @@
 
 <h1><%= link_to "Blog:", blog_posts_path %> <%= post.title %></h1>
 
-<%= link_to_delete_post(post) %> | <%= link_to_edit_post(post) %>
+<span class="fake_button"><%= link_to_delete_post(post) %> | <%= link_to_edit_post(post) %></span>
+
+<p class="small_text"><em><%= nice_date(post.created_at) %></em></p>
 
 <div>
-  <%= textilize_without_paragraph post.body %>
+  <%=raw post.body %>
 </div>
